src/test/deca/context/valid/Objet/selection_class3.deca
// Description:
//    test de la sélection double
//
// Resultats:
//   
//
// Historique:
//    cree le 18/01/2022

class A {
    int i ;
}

class B {
    A a ;
}

{
    B b = new B();
    
    b.a.i = 1 ;
}

