src/test/deca/context/invalid/Objet/callnonexistentMethod.deca
// Description:
//    test de call
//
// Resultats:
//  The method call does not belong to the selected objet
//
// Historique:
//    cree le 23/01/2022

class A  {
    int x;    
}

class B extends A {
     A a = new A();
     int y = a.call();
}
